[package]
name = "nano_extract"
version = "2.1.0"
edition = "2021"
description = "Fast Nanopore read length/quality extractor — supports .fastq, .fastq.gz and .bam"
authors = ["papaKarN"]
license = "MIT"
repository = "https://github.com/papaKarN/nano_extract"
readme = "README.md"
keywords = ["nanopore", "fastq", "bam", "bioinformatics", "sequencing"]

[[bin]]
name = "nano_extract"
path = "src/main.rs"

[dependencies]
clap    = { version = "4", features = ["derive"] }
rayon   = "1.10"
flate2  = { version = "1.0", features = ["zlib-ng"], default-features = false }
indicatif = "0.17"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
